@@ -1,3 +1,4 @@
+2858 [Video Encoder]        removed input/output settings from the command line preview
 2857 [x265]                 replaced avs4x26x with ffmpeg
 2856 [x264]                 replaced avs4x26x with ffmpeg
 2855 [Chapter Creator]      input fps can always be selected
